style: Format code
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>